# Hot-Bean-Game-Engine

./: .clang-format  .gitignore  .gitmodules  Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  Cell.cpp  Cell.h  EventSystem.h  GameObject.cpp  GameObject.h  Grid.cpp  Grid.h  Matrix.cpp  Matrix.h  OceanSim.sln  OceanSim.vcxproj  OceanSim.vcxproj.filters  Position.cpp  Position.h  README.md  TODO.txt  main.cpp
Game/: CMakeLists.txt
Game/assets/: config.yaml
Game/src/: CMakeLists.txt  config.yaml  main.cpp
Game/src/game/: CMakeLists.txt  example_game.cpp  example_game.hpp  game.cpp  game.hpp  test_game.cpp  test_game.hpp
Game/src/scenes/: CMakeLists.txt  example_scene.cpp  example_scene.hpp  example_scene.yaml  test.yaml  test_scene.cpp  test_scene.hpp
Game/src/systems/: CMakeLists.txt  audio_system.cpp  audio_system.hpp  tilemap_system.cpp  tilemap_system.hpp
Game/src/world-generator/: Cell.cpp  Grid.h
HotBeanEngine/: CMakeLists.txt
HotBeanEngine/docs/: Doxyfile  MainPage.md  index.html - Shortcut.lnk
HotBeanEngine/docs/html/: _cell_8cpp.html  _cell_8h.html  _cell_8h_source.html  _grid_8cpp.html  _grid_8h.html  _grid_8h_source.html  all__application_8hpp.html  all__application_8hpp_source.html  all__ecs_8hpp.html  all__ecs_8hpp_source.html  all__managers_8hpp.html  all__managers_8hpp_source.html  all__systems_8hpp.html  all__systems_8hpp_source.html  annotated.html  annotated_dup.js  app_8cpp.html  application_2app_8hpp.html  application_2app_8hpp.js  application_2app_8hpp_source.html  application_8hpp_source.html  archetype_8hpp.html  archetype_8hpp.js  archetype_8hpp_source.html  archetypes_2ui_2text_8hpp.html  archetypes_2ui_2text_8hpp.js  archetypes_2ui_2text_8hpp_source.html  archetypes_2ui_2ui__element_8hpp.html  archetypes_2ui_2ui__element_8hpp.js  archetypes_2ui_2ui__element_8hpp_source.html  audio__source_8hpp.html  audio__source_8hpp.js  audio__source_8hpp_source.html  audio__system_8cpp.html  audio__system_8hpp.html  audio__system_8hpp.js  audio__system_8hpp_source.html  base__game_8cpp.html  base__game_8hpp.html  base__game_8hpp.js  (+576 more)
HotBeanEngine/include/: HotBeanEngine.hpp
HotBeanEngine/include/HotBeanEngine/: HotBeanEngine.hpp  HotBeanEngine_Defaults.hpp  core.hpp
HotBeanEngine/src/: CMakeLists.txt  main.cpp
HotBeanEngine/src/application/: CMakeLists.txt  all_application.hpp  app.cpp  app.hpp  application.cpp  editor_gui.cpp  input_event_listener.cpp  macros.hpp  scene.cpp
HotBeanEngine/src/archetypes/: CMakeLists.txt  archetype.hpp  default_archetypes.hpp
HotBeanEngine/src/components/: CMakeLists.txt  audio_source.hpp  collider_2d.hpp  component_factory.cpp  component_factory.hpp  component_register.cpp  component_register.hpp  controller.hpp  default_component_factory.cpp  default_component_factory.hpp  default_components.hpp  rigidbody.hpp  text.hpp  texture.hpp  tile.hpp  transform_2d.hpp  ui_element.hpp
HotBeanEngine/src/core/: CMakeLists.txt  all_core.hpp  app.hpp  archetype.hpp  component.hpp  config.hpp  core.hpp  entity.hpp  game_loop.hpp  octree_2d.hpp  octree_2d_node.hpp  scene.hpp  signature.hpp  sparse_set.hpp  system.hpp  yaml_extensions.hpp
HotBeanEngine/src/defaults/: CMakeLists.txt  default_component_factory.cpp  default_scene.cpp  default_scene_serializer.cpp
HotBeanEngine/src/editor/: CMakeLists.txt  console_window.cpp  console_window.hpp  control_bar.cpp  control_bar.hpp  editor_gui.cpp  editor_utils.hpp  entity_window.cpp  entity_window.hpp  layer_window.cpp  layer_window.hpp  menu.cpp  menu.hpp  project_manager.cpp  project_manager.hpp  property_window.cpp  property_window.hpp
HotBeanEngine/src/editor_gui/: CMakeLists.txt  console_window.cpp  console_window.hpp  control_bar.cpp  control_bar.hpp  editor_camera.cpp  editor_gui.cpp  entity_window.cpp  entity_window.hpp  layer_window.hpp  menu.hpp  property_window.cpp  property_window.hpp  viewport_window.cpp  viewport_window.hpp
HotBeanEngine/src/factories/: CMakeLists.txt  component_factory.cpp  scene_factory.cpp  system_factory.cpp
HotBeanEngine/src/game/: CMakeLists.txt  base_game.cpp  base_game.hpp  base_scene.cpp  base_scene.hpp  game.cpp  game.hpp
HotBeanEngine/src/gameobjects/: CMakeLists.txt  default_gameobjects.hpp  player.hpp  tile.hpp
HotBeanEngine/src/managers/: CMakeLists.txt  component_manager.cpp  component_manager.hpp  (+10 more)
src/: Application.cpp  Application.h  CMakeLists.txt  main-old.cpp  main.cpp
src/application/: CMakeLists.txt  application.cpp  application.hpp  game.cpp  game.hpp
src/base/: CMakeLists.txt  Controller.cpp  Controller.h  Entity.cpp  Entity.h  GameObject.cpp  GameObject.h  Player.cpp  Player.h  Text.cpp  Text.h
src/components/: CMakeLists.txt  audio_source.hpp  collider_2d.hpp  controller.hpp  gravity.hpp  player.hpp  rigidbody.hpp  text.hpp  texture.hpp  tile.hpp  transform-2d.hpp  transform.hpp  transform_2d.hpp  ui-element.hpp  ui_element.hpp
src/config/: CMakeLists.txt  config.hpp
src/core/: CMakeLists.txt  component_manager.cpp  component_manager.hpp  core_manager.cpp  core_manager.hpp  ecs.hpp  entity_manager.cpp  entity_manager.hpp  sparse_set.hpp  system_manager.cpp  system_manager.hpp
src/game/: CMakeLists.txt  game.cpp
src/gameobjects/: CMakeLists.txt  gameobject.cpp  gameobject.hpp  player.cpp  player.hpp  text.cpp  text.hpp  tile.cpp  tile.hpp
src/managers/: CMakeLists.txt  component_manager.hpp  core_manager.cpp  core_manager.hpp  entity_manager.cpp  entity_manager.hpp  system_manager.cpp  system_manager.hpp
src/scenes/: CMakeLists.txt  test_scene.hpp
src/shared/: CMakeLists.txt  EventSystem.h  Matrix.cpp  Matrix.h  Position.cpp  Position.h
src/systems/: CMakeLists.txt  audio_system.cpp  audio_system.hpp  collision_system.cpp  collision_system.hpp  input_system.cpp  input_system.hpp  physics_system.cpp  physics_system.hpp  player_controller_system.cpp  player_controller_system.hpp  render_system.cpp  render_system.hpp  tilemap_system.cpp  tilemap_system.hpp  ui_system.cpp  ui_system.hpp
src/world-generator/: CMakeLists.txt  Cell.cpp  Cell.h  Grid.cpp  Grid.h
(+1114 files in other folders)
